# requestinator

./: .gitignore  README.md  requestinator.cabal  stack.yaml
app/: Main.hs
src/: Jikan.hs  Requestinator.hs
