name:                requestinator
version:             0.1.0.0
synopsis:            library that abstracts requests to external services
description:         Connect to services in a way that is transport layer agnostic
homepage:            https://github.com/whitehead1415/requestinator#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Whitehead
maintainer:          whitehead1415@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Requestinator
  build-depends:       base >= 4.7 && < 5
                     , conduit-combinators
                     , aeson
                     , resourcet
                     , bytestring
                     , conduit-extra
                     , http-conduit
                     , http-client
                     , http-types
                     , text
  default-language:    Haskell2010

executable requestinator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , requestinator
                     , resourcet
                     , http-client
  default-language:    Haskell2010

test-suite requestinator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , requestinator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/requestinator
